--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -34,6 +34,7 @@ h2
  * ------------------------------------- */
 
 #timeline
+  width: 100%
   list-style: none
   margin: 120px 0 0
   padding: 0
@@ -69,7 +70,7 @@ h2
   position: absolute
 
 .content
-  width: 200px
+  // width: 10%
   max-height: 0
   margin-top: 40px
   vertical-align: top
