--- a/app/views/trackers/index.html.erb
+++ b/app/views/trackers/index.html.erb
@@ -6,3 +6,7 @@
 <%= f.text_field :text %>
 <%= f.submit "Hell Yeah Ross!" %>
 <% end %>
+
+<% @tweets.each do |tweet| %>
+  <%= tweet.text %>
+<% end %>
