--- a/app/views/trackers/index.html.erb
+++ b/app/views/trackers/index.html.erb
@@ -1,7 +1,10 @@
 <div class="row">
-  <div class="large-12 columns">
+  <div class="large-11 columns">
     <%= image_tag 'logo.png', class: 'logo' %>
     <p>Track @rossk's progress in the 2014 IRONMAN Coeur d'Alene!</p>
+  </div>
+  <div class="large-1 columns">
+    <%= @tweet_count %>
   </div>
 </div>
 
