Append twitter handle

--- a/app/views/trackers/_twitter_feed.html.erb
+++ b/app/views/trackers/_twitter_feed.html.erb
@@ -3,7 +3,7 @@
 <ul class="twitter-feed">
   <% @tweets.each do |tweet| %>
     <li class="tweet">
-      <%= tweet.text %>
+      @TeamRossK: <b><%= tweet.text %></b>
     </li>
   <% end %>
 </ul>
