Add crazy logic for ross' face placement

--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -32,6 +32,9 @@ h2
 /* -------------------------------------
  * timeline
  * ------------------------------------- */
+.coloredDot
+  .circle
+    border-color: #3498db
 
 #timeline
   width: 100%
@@ -63,7 +66,6 @@ h2
   right: 0
   width: 10px
   height: 10px
-  background: $bg
   border: 5px solid $white
   border-radius: 50%
   display: block
