--- a/app/views/trackers/_twitter_form.html.erb
+++ b/app/views/trackers/_twitter_form.html.erb
@@ -1,4 +1,4 @@
-<h2 class="white">Give Ross more energy!</h2>
+<h3 class="white">You keep tweeting! He keeps going </h3>
 
 <%= form_for @tweet, url: tweets_path do |f| %>
   <%= f.text_field :text, placeholder: "Enter a tweet!" %>
